create test method